<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/musicform_toolbar"/>

    <LinearLayout
        android:id="@+id/musicSortLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/musicform_viewpager_color"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtSingle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/single"
            android:textStyle="normal"
            android:textColor="@color/music_sort_txt_color"
            android:textSize="@dimen/music_sort_text_size"
            />
        <TextView
            android:id="@+id/txtSinger"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/iLike"
            android:textStyle="normal"
            android:textColor="@color/music_sort_txt_color"
            android:textSize="@dimen/music_sort_text_size"
            />
        <TextView
            android:id="@+id/txtAlbum"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/recent"
            android:textStyle="normal"
            android:textColor="@color/music_sort_txt_color"
            android:textSize="@dimen/music_sort_text_size"
            />
        <TextView
            android:id="@+id/txtFolder"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/folder"
            android:textStyle="normal"
            android:textColor="@color/music_sort_txt_color"
            android:textSize="@dimen/music_sort_text_size"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_line_height"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="@dimen/main_matrix_width"
            android:layout_height="@dimen/main_line_height"
            android:scaleType="matrix"
            android:background="@color/colorPrimary" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/music_sort_basic_color"></View>


    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>
    <include layout="@layout/main_playbar"/>
</RelativeLayout>