<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/line_shape"
    tools:context="com.designers.kuwo.activitys.LoginActivity">

    <com.designers.kuwo.utils.CircularImage
        android:id="@+id/loginHeadPicture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/lineLogin"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/loginHeadPicture"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"

        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="10dp" >

        <TableLayout
            android:id="@+id/tbLogin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:padding="20dp"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/imgUser"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/personal_infor_set_account" />

                <EditText
                    android:id="@+id/edtUserName"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edt_shape"
                    android:hint="请输入账号"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/imgPassword"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/personal_infor_set_password" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edt_shape"
                    android:hint="请输入密码"
                    android:password="true"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="280dp"
            android:layout_height="45dp"

            android:layout_marginTop="0dp"
            android:background="@drawable/btn_login_bg"
        android:text="登录"
            android:textColor="@color/persinal_infor_color"
            android:textSize="15sp" />
<LinearLayout
    android:layout_marginTop="15dp"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:gravity="right"
    android:layout_height="25dp">
    <TextView
        android:id="@+id/login_miss_passwrod"
        android:text="@string/personal_infor_set_miss_password"
        android:textSize="10dp"
        android:textColor="@color/persinal_infor_color"
        android:layout_width="50dp"
        android:layout_height="20dp" />

</LinearLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_bg"
            android:text="立即注册"
            android:textColor="@color/persinal_infor_color"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>
